# gm65-scanner

./: .gitignore  .test-report.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE-2.0  Makefile  README.md  SECURITY.md  defmt.x
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.opencode/plans/: feature-parity-dry-refactor.md  phase2-workspace-restructure.md
crates/gm65-scanner/: AGENTS.md  Cargo.toml  README.md
crates/gm65-scanner/src/: buffer.rs  decoder.rs  driver.rs  hid_keyboard.rs  lib.rs  protocol.rs  scanner.rs  scanner_core.rs  state_machine.rs
crates/gm65-scanner/src/driver/: async_.rs  mod.rs  sync.rs  test_helpers.rs  traits.rs  types.rs
crates/gm65-scanner/src/hid/: keyboard.rs  mod.rs  pos.rs
examples/scanner-demo/: Cargo.toml
examples/scanner-demo/src/: main.rs
examples/stm32f469i-disco/: COMPATIBILITY.md  Cargo.toml  HOST_VALIDATION.md  build.rs
examples/stm32f469i-disco/.cargo/: config.toml
examples/stm32f469i-disco/src/: async_shared.rs  bist.rs  cdc.rs  cdc_protocol.rs  compat_display.rs  compatibility.rs  display.rs  display_embassy.rs  display_utils.rs  feedback.rs  flash_store.rs  hid.rs  hid_pos_profile.rs  keyboard_profile.rs  lib.rs  main.rs  qr_display.rs  qr_display_async.rs  scanner_utils.rs  settings.rs  settings_embassy.rs  touch_embassy.rs  touch_ui.rs  usb_personality.rs
examples/stm32f469i-disco/tests/: continuous_scan_test.py  hil_test.py
examples/stm32f469i-disco/tools/: cdc_admin.py  hid_pos_dump.py
scripts/: cdc-test.py  flash-helpers.sh  test_on_device.py
src/: buffer.rs  decoder.rs  driver.rs  lib.rs  protocol.rs  scanner.rs
