[workspace]
resolver = "2"
members = [
    "crates/gm65-scanner",
    "examples/stm32f469i-disco",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Amperstrand/gm65-scanner"

[workspace.dependencies]
gm65-scanner = { path = "crates/gm65-scanner" }

# Embedded
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
embedded-hal = "1.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2", features = ["unproven"] }
embedded-graphics = "0.8"
heapless = "0.8"
nb = "1.1"
static_cell = "2.1"
linked_list_allocator = "0.10"
critical-section = "1.2"
usb-device = "0.3"
usbd-serial = "0.2"
usbd-hid = "0.10"
qrcodegen-no-heap = "1.8"
bitflags = "2.6"

# BSP - pinned to working commit
stm32f469i-disc = { git = "https://github.com/Amperstrand/stm32f469i-disc", rev = "fa6dc86" }

# Embassy - pinned to latest release
embassy-time = { git = "https://github.com/embassy-rs/embassy", package = "embassy-time", rev = "84444a19", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", package = "embassy-executor", rev = "84444a19", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", package = "embassy-stm32", rev = "84444a19", features = ["stm32f469ni", "time-driver-any", "exti", "defmt"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", package = "embassy-usb", rev = "84444a19" }
embassy-usb-synopsys-otg = { git = "https://github.com/embassy-rs/embassy", package = "embassy-usb-synopsys-otg", rev = "84444a19" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", package = "embassy-sync", rev = "84444a19" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", package = "embassy-futures", rev = "84444a19" }

[profile.release]
debug = true
lto = true
opt-level = "s"
