[workspace]
resolver = "2"
members = [
    "crates/gm65-scanner",
    "examples/stm32f469i-disco",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Amperstrand/gm65-scanner"

[workspace.dependencies]
gm65-scanner = { path = "crates/gm65-scanner", default-features = false }

# Embedded
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = { version = "1.0", features = ["disable-blocking-mode"] }
panic-probe = { version = "1.0", features = ["print-defmt"] }
panic-halt = "0.2"
embedded-hal = "1.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2", features = ["unproven"] }
embedded-graphics = "0.8"
heapless = "0.8"
nb = "1.1"
static_cell = "2.1"
linked_list_allocator = "0.10"
critical-section = "1.2"
usb-device = "0.3"
usbd-serial = "0.2"
qrcodegen-no-heap = "1.8"
bitflags = "2.6"

# BSP - pinned to latest
stm32f469i-disc = { git = "https://github.com/Amperstrand/stm32f469i-disc", rev = "ea3b1b2", default-features = false }

# Embassy - pinned to latest release
embassy-time = { git = "https://github.com/embassy-rs/embassy", package = "embassy-time", rev = "84444a19" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", package = "embassy-executor", rev = "84444a19", features = ["platform-cortex-m", "executor-thread"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", package = "embassy-stm32", rev = "84444a19", features = ["stm32f469ni", "time-driver-any", "exti"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", package = "embassy-usb", rev = "84444a19" }
embassy-usb-synopsys-otg = { git = "https://github.com/embassy-rs/embassy", package = "embassy-usb-synopsys-otg", rev = "84444a19" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", package = "embassy-sync", rev = "84444a19" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", package = "embassy-futures", rev = "84444a19" }

# Override nt35510 v0.1.0 (crates.io) with git rev 7d588ef (refined init sequence)
# The embassy BSP uses crates.io v0.1.0 which has a different DCS command sequence
# than the git version used by the sync BSP. The git version includes TEEON,
# COLMOD=RGB888→RGB565 ordering, WRCTRLD=0x24, WRCABC=0x02, WRCABCMB=0xFF.
[patch.crates-io]
nt35510 = { git = "https://github.com/Amperstrand/nt35510", rev = "7d588ef40d94f51f2ed2df33acbb04a920a4ae0b" }

[patch."https://github.com/Amperstrand/embassy-stm32f469i-disco"]
embassy-stm32f469i-disco = { path = "../embassy-stm32f469i-disco" }

[profile.release]
debug = true
lto = true
opt-level = "s"
