[workspace]
resolver = "2"
members = [
    "crates/gm65-scanner",
    "examples/stm32f469i-disco",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Amperstrand/gm65-scanner"

[workspace.dependencies]
gm65-scanner = { path = "crates/gm65-scanner", default-features = false }

# Embedded
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = { version = "1.0", features = ["disable-blocking-mode"] }
panic-probe = { version = "1.0", features = ["print-defmt"] }
panic-halt = "0.2"
embedded-hal = "1.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2", features = ["unproven"] }
embedded-graphics = "0.8"
heapless = "0.8"
nb = "1.1"
static_cell = "2.1"
linked_list_allocator = "0.10"
critical-section = "1.2"
usb-device = "0.3"
usbd-serial = "0.2"
qrcodegen-no-heap = "1.8"
bitflags = "2.6"

# BSP - pinned to latest (includes PORTRAIT_DSI timing, LP 16/0, DSI/LTDC sync)
stm32f469i-disc = { git = "https://github.com/Amperstrand/stm32f469i-disc", rev = "ceb8b0e", default-features = false }

# Embassy - crates.io
embassy-time = { version = "0.5.1" }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }
embassy-stm32 = { version = "0.6.0", features = ["stm32f469ni", "time-driver-any", "exti"] }
embassy-usb = { version = "0.6.0" }
embassy-usb-synopsys-otg = { version = "0.3.3" }
embassy-sync = { version = "0.8.0" }
embassy-futures = { version = "0.1.2" }

[patch.crates-io]
nt35510 = { git = "https://github.com/Amperstrand/nt35510", rev = "263d8e4" }

[profile.release]
debug = true
lto = true
opt-level = "s"
