[package]
name = "gm65-stm32f469-scanner-demo-embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
alloc-cortex-m = "0.4"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = "1.0"
embassy-executor = { git = "https://github.com/embassy-rs/embassy", package = "embassy-executor", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", package = "embassy-stm32", features = ["defmt", "stm32f469ni", "memory-x", "time", "time-driver-any", "unstable-pac"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", package = "embassy-time", features = ["defmt", "tick-hz-1_000_000"] }
embedded-io-async = "0.7"
embedded-graphics = "0.8.1"
gm65-scanner = { path = "../../crates/gm65-scanner", features = ["async", "hil-tests"] }
panic-probe = { version = "1.0", features = ["print-defmt"] }

[features]
default = []
hil-tests = []

[profile.dev]
opt-level = 3
debug = true
strip = "none"

[profile.release]
opt-level = "s"
lto = true
debug = true

[workspace]
