[package]
name = "stm32f469i-disco-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["sync-mode", "defmt"]
sync-mode = [
    "gm65-scanner/sync", "gm65-scanner/hil-tests",
    "dep:stm32f469i-disc", "dep:usbd-serial",
]
scanner-async = [
    "gm65-scanner/async", "gm65-scanner/hil-tests",
    "dep:embassy-executor", "dep:embassy-stm32", "dep:embassy-time",
    "dep:embassy-usb", "dep:embassy-usb-synopsys-otg",
    "dep:embassy-sync", "dep:embassy-futures",
    "dep:embedded-io", "dep:embedded-io-async",
    "dep:stm32-fmc", "dep:nt35510",
    "dep:embedded-display-controller", "dep:embassy-stm32f469i-disco",
]
defmt = ["dep:defmt", "dep:defmt-rtt", "dep:panic-probe", "gm65-scanner/defmt"]

[dependencies]
cortex-m = { workspace = true, features = ["critical-section-single-core"] }
cortex-m-rt = { workspace = true }
defmt = { workspace = true, optional = true }
defmt-rtt = { workspace = true, optional = true }
panic-probe = { workspace = true, optional = true }
embedded-hal = { workspace = true }
embedded-hal-02 = { workspace = true }
embedded-graphics = { workspace = true }
heapless = { workspace = true }
linked_list_allocator = { workspace = true }
nb = { workspace = true }
static_cell = { workspace = true }
usb-device = { workspace = true }
usbd-serial = { workspace = true, optional = true }
qrcodegen-no-heap = { workspace = true }
gm65-scanner = { workspace = true }
stm32f469i-disc = { workspace = true, features = ["usb_fs", "framebuffer"], optional = true }
stm32f4 = { version = "0.16", features = ["stm32f469"], optional = true }

embedded-io = { version = "0.7", optional = true }
embedded-io-async = { version = "0.7", optional = true }

embassy-executor = { workspace = true, optional = true }
embassy-stm32 = { workspace = true, optional = true }
embassy-time = { workspace = true, optional = true }
embassy-usb = { workspace = true, optional = true }
embassy-usb-synopsys-otg = { workspace = true, optional = true }
embassy-sync = { workspace = true, optional = true }
embassy-futures = { workspace = true, optional = true }
stm32-fmc = { version = "0.4.0", features = ["sdram"], optional = true }
nt35510 = { version = "0.1.0", optional = true }
embedded-display-controller = { version = "0.2.0", optional = true }
embassy-stm32f469i-disco = { git = "https://github.com/Amperstrand/embassy-stm32f469i-disco", rev = "e202e9a", optional = true }
