[package]
name = "stm32f469i-disco-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["sync-mode", "hil-tests", "defmt"]
sync-mode = [
    "gm65-scanner/sync",
    "dep:stm32f469i-disc", "dep:usbd-serial", "dep:panic-halt",
]
hil-tests = [
    "gm65-scanner/sync", "gm65-scanner/hil-tests",
    "dep:stm32f469i-disc", "dep:panic-probe",
]
scanner-async = [
    "gm65-scanner/async",
    "dep:embassy-executor", "dep:embassy-stm32", "dep:embassy-time",
    "dep:embassy-usb", "dep:embassy-usb-synopsys-otg",
    "dep:embassy-sync", "dep:embassy-futures",
    "dep:panic-halt",
    "dep:embedded-io", "dep:embedded-io-async",
    "dep:stm32-fmc", "dep:nt35510",
    "dep:embedded-display-controller", "dep:embassy-stm32f469i-disco",
]
defmt = [
    "dep:defmt", "dep:defmt-rtt", "dep:panic-probe", "gm65-scanner/defmt",
    "embassy-time/defmt", "embassy-executor/defmt", "embassy-stm32/defmt",
]

[dependencies]
cortex-m = { workspace = true, features = ["critical-section-single-core"] }
cortex-m-rt = { workspace = true }
defmt = { workspace = true, optional = true }
defmt-rtt = { workspace = true, optional = true }
panic-probe = { workspace = true, optional = true }
panic-halt = { workspace = true, optional = true }
embedded-hal = { workspace = true }
embedded-hal-02 = { workspace = true }
embedded-graphics = { workspace = true }
heapless = { workspace = true }
linked_list_allocator = { workspace = true }
nb = { workspace = true }
static_cell = { workspace = true }
usb-device = { workspace = true }
usbd-serial = { workspace = true, optional = true }
qrcodegen-no-heap = { workspace = true }
gm65-scanner = { workspace = true, default-features = false }
stm32f469i-disc = { workspace = true, default-features = false, features = ["usb_fs", "framebuffer"], optional = true }
stm32f4 = { version = "0.16", features = ["stm32f469"], optional = true }

embedded-io = { version = "0.7", optional = true }
embedded-io-async = { version = "0.7", optional = true }

embassy-executor = { workspace = true, optional = true }
embassy-stm32 = { workspace = true, optional = true }
embassy-time = { workspace = true, optional = true }
embassy-usb = { workspace = true, optional = true }
embassy-usb-synopsys-otg = { workspace = true, optional = true }
embassy-sync = { workspace = true, optional = true }
embassy-futures = { workspace = true, optional = true }
stm32-fmc = { version = "0.4.0", features = ["sdram"], optional = true }
nt35510 = { git = "https://github.com/Amperstrand/nt35510", rev = "7d588ef40d94f51f2ed2df33acbb04a920a4ae0b", optional = true }
embedded-display-controller = { version = "0.2.0", optional = true }
embassy-stm32f469i-disco = { git = "https://github.com/Amperstrand/embassy-stm32f469i-disco", rev = "72f2357", optional = true, features = ["defmt"] }

[[bin]]
name = "baud_probe"
path = "src/bin/baud_probe.rs"
required-features = ["scanner-async", "defmt"]

[[bin]]
name = "touch_test"
path = "src/bin/touch_test.rs"
required-features = ["sync-mode"]

[[bin]]
name = "async_display_test"
path = "src/bin/async_display_test.rs"
required-features = ["scanner-async"]

[[bin]]
name = "embassy_display_bsp_minimal"
path = "src/bin/embassy_display_bsp_minimal.rs"
required-features = ["scanner-async", "defmt"]
