[package]
name = "stm32f469i-disco-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["sync-mode"]
sync-mode = [
    "gm65-scanner/sync",
    "dep:stm32f469i-disc", "dep:usbd-serial", "dep:panic-halt",
]
hil-tests = [
    "gm65-scanner/sync", "gm65-scanner/hil-tests",
    "dep:stm32f469i-disc", "dep:panic-probe",
]
scanner-async = [
    "gm65-scanner/async",
    "dep:embassy-executor", "dep:embassy-stm32", "dep:embassy-time",
    "dep:embassy-usb", "dep:embassy-usb-synopsys-otg",
    "dep:embassy-sync", "dep:embassy-futures",
    "dep:panic-halt",
    "dep:embedded-io", "dep:embedded-io-async",
    "dep:stm32-fmc", "dep:nt35510", "dep:otm8009a",
    "dep:embedded-display-controller", "dep:embassy-stm32f469i-disco",
    "dep:stm32-metapac",
]
defmt = [
    "dep:defmt", "dep:defmt-rtt", "dep:panic-probe", "gm65-scanner/defmt",
    "embassy-time/defmt", "embassy-executor/defmt", "embassy-stm32/defmt",
    "embassy-stm32f469i-disco/defmt",
]

[dependencies]
cortex-m = { workspace = true, features = ["critical-section-single-core"] }
cortex-m-rt = { workspace = true }
defmt = { workspace = true, optional = true }
defmt-rtt = { workspace = true, optional = true }
panic-probe = { workspace = true, optional = true }
panic-halt = { workspace = true, optional = true }
embedded-hal = { workspace = true }
embedded-hal-02 = { workspace = true }
embedded-graphics = { workspace = true }
heapless = { workspace = true }
linked_list_allocator = { workspace = true }
nb = { workspace = true }
static_cell = { workspace = true }
usb-device = { workspace = true }
usbd-serial = { workspace = true, optional = true }
qrcodegen-no-heap = { workspace = true }
gm65-scanner = { workspace = true, default-features = false }
stm32f469i-disc = { workspace = true, default-features = false, features = ["usb_fs", "framebuffer"], optional = true }
stm32f4 = { version = "0.16", features = ["stm32f469"], optional = true }

embedded-io = { version = "0.7", optional = true }
embedded-io-async = { version = "0.7", optional = true }

embassy-executor = { workspace = true, optional = true }
embassy-stm32 = { workspace = true, optional = true }
stm32-metapac = { version = "21", default-features = false, features = ["stm32f469ni"], optional = true }
embassy-time = { workspace = true, optional = true }
embassy-usb = { workspace = true, optional = true }
embassy-usb-synopsys-otg = { workspace = true, optional = true }
embassy-sync = { workspace = true, optional = true }
embassy-futures = { workspace = true, optional = true }
stm32-fmc = { version = "0.4.0", features = ["sdram"], optional = true }
nt35510 = { git = "https://github.com/Amperstrand/nt35510", rev = "cb746f7", optional = true }
otm8009a = { git = "https://github.com/Amperstrand/otm8009a", rev = "76dcda9", optional = true }
embedded-display-controller = { version = "0.2.0", optional = true }
embassy-stm32f469i-disco = { git = "https://github.com/Amperstrand/embassy-stm32f469i-disco", rev = "5496d4b", optional = true, default-features = false, features = ["display", "touch"] }

[[bin]]
name = "baud_probe"
path = "src/bin/baud_probe.rs"
required-features = ["scanner-async", "defmt"]

[[bin]]
name = "hil_test_sync"
path = "src/bin/hil_test_sync.rs"
required-features = ["hil-tests", "defmt"]

[[bin]]
name = "hil_test_async"
path = "src/bin/hil_test_async.rs"
required-features = ["scanner-async", "defmt", "gm65-scanner/hil-tests"]

[[bin]]
name = "async_firmware"
path = "src/bin/async_firmware.rs"
required-features = ["scanner-async"]
test = false

[[bin]]
name = "stm32f469i-disco-scanner"
path = "src/main.rs"
required-features = ["sync-mode"]
test = false
